# mcp-meeting-agent

./: .coverage  .gitignore  LICENSE  README.md  env.example  mcp-server-config.json  pyproject.toml  server.py
.github/: COMMIT_TEMPLATE.md
src/app/agents/: fun_facts_agent.py  github_trending_agent.py  meeting_planner_agent.py  planner_agent.py  tech_trivia_agent.py
src/app/core/: config.py  llm_gateway.py  logging_config.py
src/app/formatters/: __init__.py  meeting_notes_formatter.py  repository_formatter.py
src/app/prompts/: __init__.py  agent_prompts.py  fallback_prompts.py  meeting_prompts.py
src/app/schemas/: __init__.py  fun_facts.py  meeting_info.py  tech_trivia.py
src/app/services/: __init__.py  fun_facts_service.py  github_trending_service.py  tech_trivia_service.py
src/app/tools/: __init__.py  agent_tools.py  meeting_tools.py
src/tests/: test_fun_facts.py  test_github_trending_agent.py  test_github_trending_service.py  test_llm_gateway.py  test_meeting_notes.py  test_meeting_planner_agent.py  test_meeting_planner_agent_enhanced.py  test_meeting_planner_agent_with_tools.py  test_meeting_prompts.py  test_meeting_tools.py  test_planner_agent.py  test_repository_formatter.py  test_server_integration.py  test_tech_trivia_agent.py
