[project]
name = "mcp-meeting-agent"
version = "0.1.0"
description = "MCP server that exposes a meeting preparation agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.11.3",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.31",
    "langfuse>=3.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]
anthropic = [
    "langchain-anthropic>=0.2.0",
]
google = [
    "langchain-google-genai>=2.1.0",
]
all = [
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
